--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pm2:preview": "pm2 start vite --name 'cakfest-landing-page' -- 'preview'"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
