feat: create CI/CD deployment

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -33,5 +33,6 @@ jobs:
             pm2 stop cakfest-landing-page &&
             pm2 del cakfest-landing-page &&
             pm2 save &&
-            npm run pm2:preview
+            npm run pm2:preview &&
+            pm2 save
           "
