--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pm2:preview": "pm2 start vite --name 'cakfest-landing-page' -- 'preview'"
+    "pm2:preview": "pm2 start vite --name 'cakfest-landing-page' -- --port 8266 preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
