--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,5 +34,5 @@ jobs:
             pm2 del cakfest-landing-page &&
             pm2 save &&
             npm run pm2:preview &&
-            pm2 save
+            pm2 save # save again
           "
