--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -30,6 +30,8 @@ jobs:
             git pull &&
             npm install &&
             npm run build &&
+            rm -rf /home/sga-cakrawala/.pm2/logs/cakfest-landing-page-error.log &&
+            rm -rf /home/sga-cakrawala/.pm2/logs/cakfest-landing-page-out.log &&
             pm2 stop cakfest-landing-page &&
             pm2 del cakfest-landing-page &&
             pm2 save &&
