fix: script deployment

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -32,8 +32,8 @@ jobs:
             npm run build &&
             rm -rf /home/sga-cakrawala/.pm2/logs/cakfest-landing-page-error.log &&
             rm -rf /home/sga-cakrawala/.pm2/logs/cakfest-landing-page-out.log &&
-            # pm2 stop cakfest-landing-page &&
-            # pm2 del cakfest-landing-page &&
+            pm2 stop cakfest-landing-page &&
+            pm2 del cakfest-landing-page &&
             pm2 save &&
             npm run pm2:start &&
             pm2 save # save again
