--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pm2:start": "pm2 --name cakfest-landing-page serve dist/ 8266"
+    "pm2:start": "pm2 --name cakfest-landing-page serve dist/ 8266 --spa"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
